# Amusiz

./: .gitignore  AppImageBuilder.yml  README.md  meson.build  pm.mirko.Amusiz.json  pm.mirko.Amusiz.yml  snapcraft.yaml  snapcraft.yml
.github/workflows/: build_pkgs_release.yml  build_pkgs_unstable.yml
data/: meson.build  pm.mirko.Amusiz.appdata.xml.in  pm.mirko.Amusiz.desktop.in  pm.mirko.Amusiz.gschema.xml
debian/: changelog  control  copyright
po/: POTFILES  amusiz.pot  meson.build
src/: about.py  about.ui  amusiz.gresource.xml  amusiz.in  disclaimer.ui  fixVolume.js  globals.py  inject.css  main.py  meson.build  preferences.py  preferences.ui  scripts.js  style.css  webview.py  window.py  window.ui
